--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="200dp"
-    android:layout_height="200dp">
+    android:layout_height="200dp"
+    android:orientation="vertical">
+
 
     <ImageView
-        android:id="@+id/animalImage"
+        android:id="@+id/itemImage"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
@@ -14,13 +15,16 @@
         android:layout_marginRight="10dp"
         android:scaleType="fitCenter"/>
 
+
     <TextView
-        android:id="@+id/animalText"
+        android:id="@+id/itemText"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_marginBottom="10dp"
         android:gravity="center"
-        android:text="Text"
+        android:text="@string/text"
         android:textSize="24sp"/>
+
+
 </LinearLayout>
