--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -19,6 +19,6 @@
         android:layout_weight="3"
         android:layout_margin="12dp"
         android:textSize="24sp"
-        android:text="New Text"
+        android:text="@string/text"
         android:id="@+id/itemText"/>
 </LinearLayout>
