--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/selector_row">
 
 
     <ImageView
@@ -20,5 +21,5 @@
         android:layout_margin="12dp"
         android:textSize="24sp"
         android:text="@string/text"
-        android:id="@+id/itemText"/>
+        android:id="@+id/itemText" />
 </LinearLayout>
